testdata/corset/invalid/fncall_invalid_01.lisp
;;error:3:17-18:unknown symbol
(defcolumns (X :i16) (Y :i8))
(defcall (Y) f (Z))
